--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-  
+  <script src="openseadragon/openseadragon.min.js"></script>
 </head>
 <body>
   <div id="map" style="margin: 50px; height: 800px; width: 800px;"></div>
