--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+
+  <title>Galactic Map</title>
   
 </head>
 <body>
