--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+  <link rel="stylesheet" href="styles.css" />
 
   <title>Galactic Map</title>
   
 </head>
 <body>
-  <div id="map" style="margin: 50px; height: 800px; width: 800px;"></div>
-
+  <div id="map"></div>
+  
   <script defer src="map.js"></script>
 </body>
 </html>
