--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <body>
   <div id="map"></div>
   
-  <script defer src="map.js"></script>
+  <script defer src="map.js" type="module"></script>
 </body>
 </html>
